Fix errors highlighted by Stylelint liner. - 3

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	</header>
 	<main>
 		<h1 class="latestArticlesHighlight"><span>Don’t Miss These Latest <br> Articles</span></h1>
-		<section class="latest-articles font-balmasiq">
+		<div class="latest-articles font-balmasiq">
 			<div style="background: #555555;" class='profileCon'>
 				<div class='imgContainer'>
 					<div class="profileImageDiv"><img class='profileImg' src='images/kelvin-omereshone-200x200.jpg'
@@ -103,8 +103,8 @@
 				<div class='spanContainer'><span>Apps<sup> 200</sup></span><span>Performance<sup> 124</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
-		</section>
-		<section class="wholeMembership">
+		</div>
+		<div class="wholeMembership">
 			<div class="membership">
 				<div class="membershipText">
 					<p>All you want is a fast, secure web? That's why we use ad blockers, too, you know. We gotta keep
@@ -122,9 +122,9 @@
 					<img src="images/cat-firechat.svg" alt="">
 				</div>
 			</div>
-		</section>
+		</div>
 
-		<section class="wholeArticlesSection">
+		<div class="wholeArticlesSection">
 			<div class="articlesContainer font-balmasiq">
 				<div class="articlesDes">
 					<div class="textContainer">
@@ -180,7 +180,7 @@
 						<a class='smashinHeader' href="#">1,651 smashing members</a>
 						<a href='#' class='smashingPara'>A friendly community that keeps this website alive. With books,
 							webinars, discounts and networking — for just 1 coffee a month. </a>
-						<div class='smashBconta'><button class='smashingButton' type="button">Explore Features </div>
+						<div class='smashBconta'><button class='smashingButton' type="button">Explore Features</button></div>
 					</div>
 				</div>
 				<div class="articlesDes">
@@ -253,16 +253,16 @@
 				</div>
 
 			</div>
-		</section>
+		</div>
 
-		<section>
+		<div>
 			<div class="seeAllLatestArticles">
 				<a class="more-content-button" href="#">SEE ALL LATEST ARTICLES <i class="fa fa-long-arrow-right"
 						aria-hidden="true"></i></a>
 			</div>
-		</section>
+		</div>
 
-		<section class="wholeShippingNow">
+		<div class="wholeShippingNow">
 			<div class="shippingNow">
 				<div id="element1">JUNE 2020 • SHIPPING NOW</div>
 				<div id="element2">Meet “Click!”: Encourage Clicks</div>
@@ -275,8 +275,8 @@
 					<img src="images/click-illustration.svg" alt="">
 				</div>
 			</div>
-		</section>
-		<section class="wholePersonOfWeek">
+		</div>
+		<div class="wholePersonOfWeek">
 			<div class="personOfWeek">
 				<div class="personOfWeekProfileImageDiv">
 					<img src='images/person-of-week.png' alt=''>
@@ -292,8 +292,8 @@
 							children</a>. Thank you for sharing and caring, dear April!</h4>
 				</div>
 			</div>
-		</section>
-		<section class="wholeCommunityLinks">
+		</div>
+		<div class="wholeCommunityLinks">
 			<div class="communityLinks font-balmasiq">
 				<div class="linkContainer">
 					<div class="imgContainer">
@@ -316,7 +316,7 @@
 					</div>
 					<div class="linkTexts">
 						<h2><a href="#">Vadim Bauer</a> wrote</h2>
-						<h1><a href="#">Navigation Bar Animation</a></h1>
+						<h3><a href="#">Navigation Bar Animation</a></h3>
 						<div class="dateAndCOmme">
 							<span>june 22, 2020 —</span>
 							<span class=""> Who said navigation bars all need to look the same? Vadim Bauer shows a
@@ -360,9 +360,9 @@
 				<a class="more-content-button" href="#">MORE LINKS ON TWITTER </a><i class="fa fa-long-arrow-right"
 					aria-hidden="true"></i>
 			</div>
-		</section>
+		</div>
 
-		<section class="wholeFeaturedBook font-balmasiq">
+		<div class="wholeFeaturedBook font-balmasiq">
 			<div class="featuredBook">
 				<div class="featuredBookText">
 					<h3>FEATURED SMASHING BOOK</h3>
@@ -377,8 +377,8 @@
 					<img src="images/design-systems-hardcover-book.png" alt="">
 				</div>
 			</div>
-		</section>
-		<section class="wholeArticlesSection">
+		</div>
+		<div class="wholeArticlesSection">
 			<div class="articlesContainer2 ">
 				<div class="articlesDes2">
 					<div class="textContainer2 js">
@@ -451,10 +451,10 @@
 					</div>
 				</div>
 			</div>	
-		</section>
+		</div>
 	</main>
 	<footer>
-		<section class="allFooter">
+		<div class="allFooter">
 			<div class="footerMenuItems">
 				<h3>BROWSE ALL SMASHING MAGAZINE TOPICS</h3>
 				<ul>
@@ -525,7 +525,7 @@
 					</li>
 				</ul>
 			</div>
-		</section>
+		</div>
 	</footer>
 
 	<div class="upButton">
