--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<main>
 		<h1 class="latestArticlesHighlight"><span>Don’t Miss These Latest <br> Articles</span></h1>
 		<div class="latest-articles font-balmasiq">
-			<div style="background: #555555;" class='profileCon'>
+			<div class='profileCon c1'>
 				<div class='imgContainer'>
 					<div class="profileImageDiv"><img class='profileImg' src='images/kelvin-omereshone-200x200.jpg'
 							alt=''></div>
@@ -59,7 +59,7 @@
 							274</sup></span><span># Tools<sup> 229</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
-			<div style="background: #757575;" class='profileCon'>
+			<div class='profileCon c2'>
 				<div class='imgContainer'>
 					<div class="profileImageDiv"><img class='profileImg' src='images/carmine-zaccagnino-200x200.jpg'
 							alt=''></div>
@@ -74,7 +74,7 @@
 				<div class='spanContainer'><span>Smashy Monthly Roundup<sup> 9</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
-			<div style="background: #858585;" class='profileCon'>
+			<div class='profileCon c3'>
 				<div class='imgContainer'>
 					<div class="profileImageDiv"><img class='profileImg' src='images/chidi-orji-200x200.jpg' alt=''>
 					</div>
@@ -89,7 +89,7 @@
 							439</sup></span><span>Trends<sup> 26</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
-			<div style="background: #959595;" class='profileCon'>
+			<div class='profileCon c4'>
 				<div class='imgContainer'>
 					<div class="profileImageDiv"><img class='profileImg' src='images/drew-mclellan-profile-pic.jpg'
 							alt=''></div>
@@ -301,7 +301,7 @@
 					</div>
 					<div class="linkTexts">
 						<h2><a href="#">Vadim Bauer</a> wrote</h2>
-						<h1><a href="#">Navigation Bar Animation</a></h1>
+						<h1><a class='simpleAnchor' href="#">Navigation Bar Animation</a></h1>
 						<div class="dateAndCOmme">
 							<span>june 22, 2020 —</span>
 							<span class=""> Who said navigation bars all need to look the same? Vadim Bauer shows a
@@ -316,7 +316,7 @@
 					</div>
 					<div class="linkTexts">
 						<h2><a href="#">Vadim Bauer</a> wrote</h2>
-						<h3><a href="#">Navigation Bar Animation</a></h3>
+						<h1><a class='simpleAnchor' href="#">Navigation Bar Animation</a></h1>
 						<div class="dateAndCOmme">
 							<span>june 22, 2020 —</span>
 							<span class=""> Who said navigation bars all need to look the same? Vadim Bauer shows a
@@ -331,7 +331,7 @@
 					</div>
 					<div class="linkTexts">
 						<h2><a href="#">Vadim Bauer</a> wrote</h2>
-						<h1><a href="#">Navigation Bar Animation</a></h1>
+						<h1><a href="#" class='simpleAnchor'>Navigation Bar Animation</a></h1>
 						<div class="dateAndCOmme">
 							<span>june 22, 2020 —</span>
 							<span class=""> Who said navigation bars all need to look the same? Vadim Bauer shows a
@@ -346,7 +346,7 @@
 					</div>
 					<div class="linkTexts">
 						<h2><a href="#">Vadim Bauer</a> wrote</h2>
-						<h1><a href="#">Navigation Bar Animation</a></h1>
+						<h1><a href="#" class='simpleAnchor'>Navigation Bar Animation</a></h1>
 						<div class="dateAndCOmme">
 							<span>june 22, 2020 —</span>
 							<span class=""> Who said navigation bars all need to look the same? Vadim Bauer shows a
@@ -442,7 +442,7 @@
 										type='button'>Meow!</button></div>
 							</form>
 							<div class='footerFinalAd'>
-								<p>Front-end, UX and design. 2× a month.
+								<p>Front-end, UX and design. 2x a month.
 									<br>You can always
 									unsubscribe with just 1 click.
 								</p>
