add ul li to the elements of the navbar

--- a/index.html
+++ b/index.html
@@ -21,23 +21,27 @@
 	<header id="header" class="">
 		<nav class="navbar">
 			<img class="main-logo" src="images/logo--full.svg" alt="">
-			<div> <button class="navbar-button" type="button">Articles</button> </div>
-			<div> <button class="navbar-button" type="button">Guides</button> </div>
-			<div> <button class="navbar-button" type="button">Books</button> </div>
-			<div> <button class="navbar-button" type="button">Events</button> </div>
-			<div> <button class="navbar-button" type="button">Membership</button> </div>
-			<div> <button class="navbar-button" type="button">Jobs</button> </div>
-			<div> <button class="navbar-button" type="button">Newsletter</button> </div>
-			<div class="more-button">
-				<button style="padding-right: 0px;" class="buIcon" type="submit">More </button><img class="menu-cat-img"
-					src="images/menu-cat.svg" alt="">
-			</div>
-			<div class='formContainer'>
-				<form>
-					<div class='inputWhite'><i class="fa fa-search fa-lg" aria-hidden="true"></i><input
-							placeholder="search articles..." class="searchForm" type='text'></div>
-				</form>
-			</div>
+			<ul>
+				<li><div><button class="navbar-button" type="button">Articles</button></div></li>
+				<li><div><button class="navbar-button" type="button">Guides</button></div></li>
+				<li><div><button class="navbar-button" type="button">Books</button></div></li>
+				<li><div><button class="navbar-button" type="button">Events</button></div></li>
+				<li><div><button class="navbar-button" type="button">Membership</button></div></li>
+				<li><div><button class="navbar-button" type="button">Jobs</button></div></li>
+				<li><div><button class="navbar-button" type="button">Newsletter</button></div></li>
+				<li>
+					<div class="more-button">
+						<button style="padding-right: 0px;" class="buIcon" type="submit">More </button><img class="menu-cat-img"
+							src="images/menu-cat.svg" alt="">
+					</div>
+				</li>
+			</ul>			
+				<div class='formContainer'>
+					<form>
+						<div class='inputWhite'><i class="fa fa-search fa-lg" aria-hidden="true"></i><input
+								placeholder="search articles..." class="searchForm" type='text'></div>
+					</form>
+				</div>			
 		</nav>
 	</header>
 	<main>
