add article tag

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 		</nav>
 	</header>
 	<main>
-		<h1 class="latestArticlesHighlight"><span>Don’t Miss These Latest <br> Articles</span></h1>
-		<div class="latest-articles font-balmasiq">
+		<h1 class="latestHighlight"><span>Don’t Miss These Latest <br> Articles</span></h1>
+		<div class="latest font-balmasiq">
 			<div class='profileCon c1'>
 				<div class='imgContainer'>
 					<div class="profileImageDiv"><img class='profileImg' src='images/kelvin-omereshone-200x200.jpg'
@@ -130,10 +130,10 @@
 
 		<div class="wholeArticlesSection">
 			<div class="articlesContainer font-balmasiq">
-				<div class="articlesDes">
+				<article class="articlesDes">
 					<div class="textContainer">
 						<span>3 Days ago</span>
-						<h2>Which Video Confering Tool Are More Accesible</h2>
+						<header>Which Video Confering Tool Are More Accesible</header>
 						<p>by <a href="#">Claudio Luis Vera</a></p>
 						<p>In this article, Claudio Luis Vera explains what to keep in mind when choosing between video
 							conferencing tools to benefit everyone on your team — including those with disabilities.
@@ -141,22 +141,22 @@
 					</div>
 
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
-				</div>
-				<div class="articlesDes">
+				</article>
+				<article class="articlesDes">
 					<div class="textContainer">
 						<span>4 Days ago</span>
-						<h2>Internatiolization In Vue W ith The Vue |18n PLugin</h2>
+						<header>Internatiolization In Vue W ith The Vue |18n PLugin</header>
 						<p>by <a href="#">Drew MacLellan</a></p>
 						<p>In this article, we will build a facial recognition web app with the help of React and the
 							Face Recognition API, and cover the Face Detection model and Predict API.</p>
 					</div>
 
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
-				</div>
-				<div class="articlesDes">
+				</article>
+				<article class="articlesDes">
 					<div class="textContainer">
 						<span>8 Days ago</span>
-						<h2>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</h2>
+						<header>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</header>
 						<p>by <a href="#">Dayene David Abioudun</a></p>
 						<p>Adding Internationalization to your Vue.js application has a lot of use cases and in this
 							tutorial, we’re going to learn how to do this with the Vue I18n plugin and how to set it up
@@ -167,7 +167,7 @@
 					</div>
 
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
-				</div>
+				</article>
 				<div class="articlesGra">
 					<div class='gramarly'>
 						<span class='gramarlyPtop'>Our friends and supporters</span>
@@ -190,7 +190,7 @@
 				<div class="articlesDes">
 					<div class="textContainer">
 						<span>8 Days ago</span>
-						<h2>Mirage JS Deep Dive: Understanding Timing, Response And Passthrough (Part 3)</h2>
+						<header>Mirage JS Deep Dive: Understanding Timing, Response And Passthrough (Part 3)</header>
 						<p>by <a href="#">Kelvin Omereshone</a></p>
 						<p>
 							In this third part of Mirage JS Deep Dive series, we will be focusing on using, in Mirage
@@ -201,10 +201,10 @@
 
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
 				</div>
-				<div class="articlesDes">
+				<article class="articlesDes">
 					<div class="textContainer">
 						<span>3 Days ago</span>
-						<h2>Is Your Website Stressing Out Visitors?</h2>
+						<header>Is Your Website Stressing Out Visitors?</header>
 						<p>by <a href="#">Suzanne Scacca</a></p>
 						<p>Stress isn’t just something that makes people feel uncomfortable. There are many things that
 							might invoke this response from your visitors, including the design. In this article, we’re
@@ -212,11 +212,11 @@
 						</p>
 					</div>
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
-				</div>
-				<div class="articlesDes">
+				</article>
+				<article class="articlesDes">
 					<div class="textContainer">
 						<span>11 Days ago</span>
-						<h2>12 Ways To Improve User Interview Questions</h2>
+						<header>12 Ways To Improve User Interview Questions</header>
 						<p>by <a href="#">Slava Shestopalov</a></p>
 						<p>Right questions don’t simply roll off the tongue, but it’s a handy skill everyone can train.
 							The following pieces of advice will help you to formulate questions that foster reliable
@@ -226,11 +226,11 @@
 					</div>
 
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
-				</div>
-				<div class="articlesDes">
+				</article>
+				<article class="articlesDes">
 					<div class="textContainer">
 						<span>8 Days ago</span>
-						<h2>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</h2>
+						<header>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</header>
 						<p>by <a href="#">Dayene David Abioudun</a></p>
 						<p>Adding Internationalization to your Vue.js application has a lot of use cases and in this
 							tutorial, we’re going to learn how to do this with the Vue I18n plugin and how to set it up
@@ -239,7 +239,7 @@
 						</p>
 					</div>
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
-				</div>
+				</article>
 				<div class='smashingAd2'>
 					<div class='smashingContain'>
 						<div><img src="images/cat-smashing-tv-2.svg" alt="" class="catTv"></div>
@@ -255,17 +255,14 @@
 						<p class='smashingFooter'>Already have an account?<a href='#'> Sign in</a></p>
 					</div>
 				</div>
-
 			</div>
 		</div>
-
 		<div>
 			<div class="seeAllLatestArticles">
 				<a class="more-content-button" href="#">SEE ALL LATEST ARTICLES <i class="fa fa-long-arrow-right"
 						aria-hidden="true"></i></a>
 			</div>
 		</div>
-
 		<div class="wholeShippingNow">
 			<div class="shippingNow">
 				<div id="element1">JUNE 2020 • SHIPPING NOW</div>
@@ -385,10 +382,10 @@
 		<div class="wholeArticlesSection">
 			<div class="articlesContainer2 ">
 				<div class="articlesDes2">
-					<div class="textContainer2 js">
+					<article class="textContainer2 js">
 						<span>Smashing Guide to</span>
 						<a href='#' class='simpleAnchor'>
-							<h2>JavaScript & Frameworks</h2>
+							<header>JavaScript & Frameworks</header>
 						</a>
 
 						<p>React, Vue, or perhaps the lightweight Alpine.js? Whether you are
@@ -397,15 +394,15 @@
 							some tutorials for you.
 						</p>
 						<button class='techButton greenButton' type="button">Explore JavaScript & Frameworks</button>
-					</div>
+					</article>
 
 
 				</div>
 				<div class="articlesDes2">
-					<div class="textContainer2 css">
+					<article class="textContainer2 css">
 						<span>Smashing Guide to</span>
 						<a href='#' class='simpleAnchor'>
-							<h2>CSS Layaout</h2>
+							<header>CSS Layaout</header>
 						</a>
 
 						<p>In this article, we will build a facial recognition web app with the help of React and the
@@ -413,15 +410,15 @@
 						</p>
 						<button class='techButton orangeButton' type="button">Explore Css Layout</button>
 
-					</div>
+					</article>
 
 
 				</div>
 				<div class="articlesDes2">
-					<div class="textContainer2 web">
+					<article class="textContainer2 web">
 						<span>Smashing Guide to</span>
 						<a href='#' class='simpleAnchor'>
-							<h2>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</h2>
+							<header>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</header>
 						</a>
 
 						<p>Adding Internationalization to your Vue.js application has a lot of use cases and in this
@@ -430,7 +427,7 @@
 							our application.
 						</p>
 						<button class='techButton purpleButton' type="button">Explore Perfomance</button>
-					</div>
+					</article>
 				</div>
 				<div class='articlesDes2 '>
 					<div class='finalAdver'>
