add h2 tag for articles titles

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				<article class="articlesDes">
 					<div class="textContainer">
 						<span>3 Days ago</span>
-						<header>Which Video Confering Tool Are More Accesible</header>
+						<h2>Which Video Confering Tool Are More Accesible</h2>
 						<p>by <a href="#">Claudio Luis Vera</a></p>
 						<p>In this article, Claudio Luis Vera explains what to keep in mind when choosing between video
 							conferencing tools to benefit everyone on your team — including those with disabilities.
@@ -145,7 +145,7 @@
 				<article class="articlesDes">
 					<div class="textContainer">
 						<span>4 Days ago</span>
-						<header>Internatiolization In Vue W ith The Vue |18n PLugin</header>
+						<h2>Internatiolization In Vue W ith The Vue |18n PLugin</h2>
 						<p>by <a href="#">Drew MacLellan</a></p>
 						<p>In this article, we will build a facial recognition web app with the help of React and the
 							Face Recognition API, and cover the Face Detection model and Predict API.</p>
@@ -156,7 +156,7 @@
 				<article class="articlesDes">
 					<div class="textContainer">
 						<span>8 Days ago</span>
-						<header>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</header>
+						<h2>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</h2>
 						<p>by <a href="#">Dayene David Abioudun</a></p>
 						<p>Adding Internationalization to your Vue.js application has a lot of use cases and in this
 							tutorial, we’re going to learn how to do this with the Vue I18n plugin and how to set it up
@@ -190,7 +190,7 @@
 				<div class="articlesDes">
 					<div class="textContainer">
 						<span>8 Days ago</span>
-						<header>Mirage JS Deep Dive: Understanding Timing, Response And Passthrough (Part 3)</header>
+						<h2>Mirage JS Deep Dive: Understanding Timing, Response And Passthrough (Part 3)</h2>
 						<p>by <a href="#">Kelvin Omereshone</a></p>
 						<p>
 							In this third part of Mirage JS Deep Dive series, we will be focusing on using, in Mirage
@@ -204,7 +204,7 @@
 				<article class="articlesDes">
 					<div class="textContainer">
 						<span>3 Days ago</span>
-						<header>Is Your Website Stressing Out Visitors?</header>
+						<h2>Is Your Website Stressing Out Visitors?</h2>
 						<p>by <a href="#">Suzanne Scacca</a></p>
 						<p>Stress isn’t just something that makes people feel uncomfortable. There are many things that
 							might invoke this response from your visitors, including the design. In this article, we’re
@@ -216,7 +216,7 @@
 				<article class="articlesDes">
 					<div class="textContainer">
 						<span>11 Days ago</span>
-						<header>12 Ways To Improve User Interview Questions</header>
+						<h2>12 Ways To Improve User Interview Questions</h2>
 						<p>by <a href="#">Slava Shestopalov</a></p>
 						<p>Right questions don’t simply roll off the tongue, but it’s a handy skill everyone can train.
 							The following pieces of advice will help you to formulate questions that foster reliable
@@ -230,7 +230,7 @@
 				<article class="articlesDes">
 					<div class="textContainer">
 						<span>8 Days ago</span>
-						<header>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</header>
+						<h2>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</h2>
 						<p>by <a href="#">Dayene David Abioudun</a></p>
 						<p>Adding Internationalization to your Vue.js application has a lot of use cases and in this
 							tutorial, we’re going to learn how to do this with the Vue I18n plugin and how to set it up
@@ -385,7 +385,7 @@
 					<article class="textContainer2 js">
 						<span>Smashing Guide to</span>
 						<a href='#' class='simpleAnchor'>
-							<header>JavaScript & Frameworks</header>
+							<h2>JavaScript & Frameworks</h2>
 						</a>
 
 						<p>React, Vue, or perhaps the lightweight Alpine.js? Whether you are
@@ -402,7 +402,7 @@
 					<article class="textContainer2 css">
 						<span>Smashing Guide to</span>
 						<a href='#' class='simpleAnchor'>
-							<header>CSS Layaout</header>
+							<h2>CSS Layaout</h2>
 						</a>
 
 						<p>In this article, we will build a facial recognition web app with the help of React and the
@@ -418,7 +418,7 @@
 					<article class="textContainer2 web">
 						<span>Smashing Guide to</span>
 						<a href='#' class='simpleAnchor'>
-							<header>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</header>
+							<h2>Mirage JS Deep Dive: Undestanding Timing Response And Passthrough</h2>
 						</a>
 
 						<p>Adding Internationalization to your Vue.js application has a lot of use cases and in this
