--- a/index.html
+++ b/index.html
@@ -22,26 +22,24 @@
 		<nav class="navbar">
 			<img class="main-logo" src="images/logo--full.svg" alt="">
 			<ul>
-				<li><div><button class="navbar-button" type="button">Articles</button></div></li>
-				<li><div><button class="navbar-button" type="button">Guides</button></div></li>
-				<li><div><button class="navbar-button" type="button">Books</button></div></li>
-				<li><div><button class="navbar-button" type="button">Events</button></div></li>
-				<li><div><button class="navbar-button" type="button">Membership</button></div></li>
-				<li><div><button class="navbar-button" type="button">Jobs</button></div></li>
-				<li><div><button class="navbar-button" type="button">Newsletter</button></div></li>
-				<li>
-					<div class="more-button">
-						<button style="padding-right: 0px;" class="buIcon" type="submit">More </button><img class="menu-cat-img"
-							src="images/menu-cat.svg" alt="">
-					</div>
+				<li><button class="navbar-button" type="button">Articles</button></li>
+				<li><button class="navbar-button" type="button">Guides</button></li>
+				<li><button class="navbar-button" type="button">Books</button></li>
+				<li><button class="navbar-button" type="button">Events</button></li>
+				<li><button class="navbar-button" type="button">Membership</button></li>
+				<li><button class="navbar-button" type="button">Jobs</button></li>
+				<li><button class="navbar-button" type="button">Newsletter</button></li>
+				<li class="more-button">
+					<button style="padding-right: 0px;" class="buIcon" type="submit">More </button><img
+						class="menu-cat-img" src="images/menu-cat.svg" alt="">
 				</li>
-			</ul>			
-				<div class='formContainer'>
-					<form>
-						<div class='inputWhite'><i class="fa fa-search fa-lg" aria-hidden="true"></i><input
-								placeholder="search articles..." class="searchForm" type='text'></div>
-					</form>
-				</div>			
+			</ul>
+			<div class='formContainer'>
+				<form>
+					<div class='inputWhite'><i class="fa fa-search fa-lg" aria-hidden="true"></i><input
+							placeholder="search articles..." class="searchForm" type='text'></div>
+				</form>
+			</div>
 		</nav>
 	</header>
 	<main>
@@ -71,10 +69,10 @@
 						<p class="profileName">Carmin Zaccagnino <em>wrote</em></p>
 					</div>
 				</div>
-				<h1>Solving Common Cross-Platform Issues When Working with Flutter 
+				<h1>Solving Common Cross-Platform Issues When Working with Flutter
 					<span class='inline'><i class="fa fa-envelope-o" aria-hidden="true"></i> Comment</span>
 				</h1>
-				
+
 				<div class='spanContainer'><span>Smashy Monthly Roundup<sup> 9</sup></span></div>
 				<i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i>
 			</div>
@@ -184,7 +182,8 @@
 						<a class='smashinHeader' href="#">1,651 smashing members</a>
 						<a href='#' class='smashingPara'>A friendly community that keeps this website alive. With books,
 							webinars, discounts and networking — for just 1 coffee a month. </a>
-						<div class='smashBconta'><button class='smashingButton' type="button">Explore Features</button></div>
+						<div class='smashBconta'><button class='smashingButton' type="button">Explore Features</button>
+						</div>
 					</div>
 				</div>
 				<div class="articlesDes">
@@ -451,7 +450,7 @@
 						</div>
 					</div>
 				</div>
-			</div>	
+			</div>
 		</div>
 	</main>
 	<footer>
