Update footer part.;2C

--- a/index.html
+++ b/index.html
@@ -500,38 +500,45 @@
 					Fonts by <a href="#">Latinotype</a>.
 				</p>
 			</div>
-			<div class="copyright">
-				<ul class="ul-copyright">
-					<li class="li-copyright">
-						✎ <a href="#">Write for us</a>
-					</li>
-					<li class="li-copyright">
-						<a href="#">Contact us</a>
-					</li>
-					<li class="li-copyright">
-						<a href="#">About us(Impressum)</a>
-					</li>
-					<li class="li-copyright">
-						<a href="#">Privacy policy</a>
-					</li>
-					<li class="li-copyright">
-						<a href="#">Membership login</a>
-					</li>
-					<li class="li-copyright">
-						<a href="#">Delivery times</a>
-					</li>
-					<li class="li-copyright">
-						<a href="#">Advertise</a>
-					</li>
-				</ul>
+		</div>
+		<div class="completeFooter">
+			<div class="footerImage">
+				<img src="images/img_placeholder.png" alt="">
+			</div>
+			<div class="allCopyright">
+				<div class="copyright">
+					<ul class="ul-copyright">
+						<li class="li-copyright">
+							✎ <a href="#">Write for us</a>
+						</li>
+						<li class="li-copyright">
+							<a href="#">Contact us</a>
+						</li>
+						<li class="li-copyright">
+							<a href="#">About us(Impressum)</a>
+						</li>
+						<li class="li-copyright">
+							<a href="#">Privacy policy</a>
+						</li>
+						<li class="li-copyright">
+							<a href="#">Membership login</a>
+						</li>
+						<li class="li-copyright">
+							<a href="#">Delivery times</a>
+						</li>
+						<li class="li-copyright">
+							<a href="#">Advertise</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="footerImage">
 			</div>
 		</div>
+		<div class="upButton">
+			<a href="#"><i class="fa fa-angle-up fa-3x" aria-hidden="true"></i></a>
+		</div>
 	</footer>
-
-	<div class="upButton">
-		<a href="#"><i class="fa fa-angle-up fa-3x" aria-hidden="true"></i></a>
-	</div>
-
 </body>
 
 </html>
