Change real images to placeholder images.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="latest font-balmasiq">
 			<div class='profileCon c1'>
 				<div class='imgContainer'>
-					<div class="profileImageDiv"><img class='profileImg' src='images/kelvin-omereshone-200x200.jpg'
+					<div class="profileImageDiv"><img class='profileImg' src='images/profile-image-placeholder.jpg'
 							alt=''></div>
 					<div>
 						<p class="profileName">Kevin Omershone <em>wrote</em></p>
@@ -63,7 +63,7 @@
 			</div>
 			<div class='profileCon c2'>
 				<div class='imgContainer'>
-					<div class="profileImageDiv"><img class='profileImg' src='images/carmine-zaccagnino-200x200.jpg'
+					<div class="profileImageDiv"><img class='profileImg' src='images/profile-image-placeholder.jpg'
 							alt=''></div>
 					<div>
 						<p class="profileName">Carmin Zaccagnino <em>wrote</em></p>
@@ -78,7 +78,7 @@
 			</div>
 			<div class='profileCon c3'>
 				<div class='imgContainer'>
-					<div class="profileImageDiv"><img class='profileImg' src='images/chidi-orji-200x200.jpg' alt=''>
+					<div class="profileImageDiv"><img class='profileImg' src='images/profile-image-placeholder.jpg'>
 					</div>
 					<div>
 						<p class="profileName">Chidi Orji <em>wrote</em></p>
@@ -93,7 +93,7 @@
 			</div>
 			<div class='profileCon c4'>
 				<div class='imgContainer'>
-					<div class="profileImageDiv"><img class='profileImg' src='images/drew-mclellan-profile-pic.jpg'
+					<div class="profileImageDiv"><img class='profileImg' src='images/profile-image-placeholder.jpg'
 							alt=''></div>
 					<div>
 						<p class="profileName">Drew MacLellan <em>wrote</em></p>
@@ -186,7 +186,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="articlesDes">
+				<article class="articlesDes">
 					<div class="textContainer">
 						<span>8 Days ago</span>
 						<h2>Mirage JS Deep Dive: Understanding Timing, Response And Passthrough (Part 3)</h2>
@@ -199,7 +199,7 @@
 					</div>
 
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
-				</div>
+				</article>
 				<article class="articlesDes">
 					<div class="textContainer">
 						<span>3 Days ago</span>
@@ -279,7 +279,7 @@
 		<div class="wholePersonOfWeek">
 			<div class="personOfWeek">
 				<div class="personOfWeekProfileImageDiv">
-					<img src='images/person-of-week.png' alt=''>
+					<img src='images/profile-image-placeholder.jpg' alt=''>
 				</div>
 				<div class="personOfWeekText">
 					<h2>PERSON OF THE WEEK</h2>
@@ -297,7 +297,7 @@
 			<div class="communityLinks font-balmasiq">
 				<div class="linkContainer">
 					<div class="imgContainer">
-						<img class="profileImg" src='images/kelvin-omereshone-200x200.jpg' alt=''>
+						<img class="profileImg" src='images/profile-image-placeholder.jpg' alt=''>
 					</div>
 					<div class="linkTexts">
 						<h2><a href="#">Vadim Bauer</a> wrote</h2>
@@ -312,7 +312,7 @@
 				</div>
 				<div class="linkContainer">
 					<div class="imgContainer">
-						<img class="profileImg" src='images/kelvin-omereshone-200x200.jpg' alt=''>
+						<img class="profileImg" src='images/profile-image-placeholder.jpg' alt=''>
 					</div>
 					<div class="linkTexts">
 						<h2><a href="#">Vadim Bauer</a> wrote</h2>
@@ -327,7 +327,7 @@
 				</div>
 				<div class="linkContainer">
 					<div class="imgContainer">
-						<img class="profileImg" src='images/kelvin-omereshone-200x200.jpg' alt=''>
+						<img class="profileImg" src='images/profile-image-placeholder.jpg' alt=''>
 					</div>
 					<div class="linkTexts">
 						<h2><a href="#">Vadim Bauer</a> wrote</h2>
@@ -342,7 +342,7 @@
 				</div>
 				<div class="linkContainer">
 					<div class="imgContainer">
-						<img class="profileImg" src='images/kelvin-omereshone-200x200.jpg' alt=''>
+						<img class="profileImg" src='images/profile-image-placeholder.jpg' alt=''>
 					</div>
 					<div class="linkTexts">
 						<h2><a href="#">Vadim Bauer</a> wrote</h2>
