Add margin to smashing ads.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					<a class="membershipButton" href="#">About Smashing Membership</a>
 				</div>
 				<div class="membershipImage">
-					<img src="images/cat-firechat.svg" alt="">
+					<img src="images/img_placeholder.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -178,7 +178,7 @@
 				</div>
 				<div class='smashingAdver'>
 					<div class='smashingContain'>
-						<div><img src="images/singing-barista.svg" alt="" class="catSmash"></div>
+						<div><img src="images/img_placeholder.png" alt="" class="catSmash"></div>
 						<a class='smashinHeader' href="#">1,651 smashing members</a>
 						<a href='#' class='smashingPara'>A friendly community that keeps this website alive. With books,
 							webinars, discounts and networking — for just 1 coffee a month. </a>
@@ -241,7 +241,7 @@
 				</article>
 				<div class='smashingAd2'>
 					<div class='smashingContain'>
-						<div><img src="images/cat-smashing-tv-2.svg" alt="" class="catTv"></div>
+						<div><img src="images/img_placeholder.png" alt="" class="catTv"></div>
 						<a class='smashinHeader' href="#">New on Smashing TV</a>
 
 						<a href='#' class="smashingPara2">
@@ -272,7 +272,7 @@
 				<div id="element5"> <a>Jump to table of contents <i class="fa fa-long-arrow-right"
 							aria-hidden="true"></i> </a></div>
 				<div class="shippingNowImage">
-					<img src="images/click-illustration.svg" alt="">
+					<img src="images/img_placeholder.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -374,7 +374,7 @@
 					<a class="tableOfContentsButton" href="#">Jump to table of contents</a>
 				</div>
 				<div class="featuredBookImage">
-					<img src="images/design-systems-hardcover-book.png" alt="">
+					<img src="images/img_placeholder.png" alt="">
 				</div>
 			</div>
 		</div>
@@ -431,7 +431,7 @@
 				<div class='articlesDes2 '>
 					<div class='finalAdver'>
 						<div class='blu'>
-							<div><img src="images/ny20.png" alt="ny20" class="cat20"></div>
+							<div><img src="images/img_placeholder.png" alt="ny20" class="cat20"></div>
 							<a class='smashinHeader2' href="#">Email Newsletter</a>
 							<a href='#' class='smashingPara2'>A friendly community that keeps this website alive. With
 								books,
