--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
 				</article>
 				<div class="articlesGra">
+					<span class='gramarlyPtop'>Our friends and supporters<i class="fa fa-long-arrow-down" aria-hidden="true"></i> </span>
 					<div class='gramarly'>
-						<span class='gramarlyPtop'>Our friends and supporters</span>
 						<div class='gramrBlock'>
 							<div><img class='gramIcon' src="images/logo-grammarly.svg" alt="grammarly"></div>
 							<p>Grammarly helps shape the way millions of people communicate every day!</p>
