Fix issues highlighted by linters.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 			</div>
 			<div class='profileCon c3'>
 				<div class='imgContainer'>
-					<div class="profileImageDiv"><img class='profileImg' src='images/profile-image-placeholder.jpg'>
+					<div class="profileImageDiv"><img class='profileImg' alt=''
+							src='images/profile-image-placeholder.jpg'>
 					</div>
 					<div>
 						<p class="profileName">Chidi Orji <em>wrote</em></p>
@@ -166,7 +167,8 @@
 					<div class="redArrow"><i class="fa fa-long-arrow-right fa-3x" aria-hidden="true"></i></div>
 				</article>
 				<div class="articlesGra">
-					<span class='gramarlyPtop'>Our friends and supporters<i class="fa fa-long-arrow-down" aria-hidden="true"></i> </span>
+					<span class='gramarlyPtop'>Our friends and supporters<i class="fa fa-long-arrow-down"
+							aria-hidden="true"></i> </span>
 					<div class='gramarly'>
 						<div class='gramrBlock'>
 							<div><img class='gramIcon' src="images/logo-grammarly.svg" alt="grammarly"></div>
